store/src/styles/components/refineLocation.scss
// transition for refine location component
.hern-store-refine-location__css-transition-enter {
   transform: translate(-100%);
}
.hern-store-refine-location__css-transition-active {
   transition: transform 0.2s ease-in;
   transform: translate(0%, 0px);
}
.hern-store-refine-location__css-transition-exit {
   transform: translate(0%, 0px);
}

.hern-store-refine-location__css-transition-exit-active {
   transition: transform 0.2s ease-in-out;
   transform: translate(-100%);
}

.hern-refine-location {
   position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   z-index: 10000000000000000;
   height: 100vh;
   width: 100vw;
}
.hern-refine-location_content {
   height: 100%;
   background: #ffffff;
}
.hern-refine-location__address-form {
   margin: 10px;
   margin-top: 4px;
   // height: 26.5rem;
   overflow: auto;
}
.hern-refine-location__address-form-field {
   width: 100%;
}
.hern-refine-location__address-input {
   height: 40px;
   background: #f4f4f4;
   border-radius: 8px;
   padding: 0 10px;
   outline: none;
}
.hern-refine-location__address-text-area {
   background: #f4f4f4;
   border-radius: 8px;
   padding: 10px;
   outline: none;
}
.hern-refine-location__save-proceed-btn {
   width: 100%;
   position: sticky;
   bottom: 0;
   height: 40px;
}
.hern-refine-location__no-store-available {
   color: #ec4730;
}
.hern-refine-location-search-close-icon {
   padding: 8px;
   cursor: pointer;
   border: 1px solid #f3f3f3;
   box-sizing: border-box;
   box-shadow: 0px 1px 8px rgb(0 0 0 / 5%);
   border-radius: 6px;
   margin-right: 8px;
   height: 36px;
}
.hern-refine-location-close-icon {
   // margin-top: 14px;
}
@media (min-width: 768px) {
   .hern-refine-location_content {
      width: 28em;
      background: #ffffff;
   }
   .hern-refine-location {
      background: rgba(32, 32, 32, 0.4);
   }
}

